--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -1,10 +1,11 @@
-<h1>Expenses made Today</h1>
-<p><%= link_to "Add an expense",new_expense_path %></p>
+<h1>Expenses made Today(<%= Date.today.to_s(:long) %>)</h1>
+
+<br/>
 <table>
 	<tr>
 		<th>Expense</th>
 		<th>Amount</th>
-		<th>Date</th>
+		<!-- <th>Date</th> -->
 	</tr>
 <% @expenses.each do |f| %>
 	<tr>
@@ -12,10 +13,16 @@
 		</td>
 		<td><%= f.amount %>
 		</td>
-		<td> <%= f.date.to_s(:long) %>
+		<!-- <td> <%= f.date.to_s(:long) %> -->
 		</td>
 		<td> <%= link_to "Edit" , edit_expense_path(f) %> </td>
 		<td> <%= link_to "Delete" , expense_path(f), method: :delete, data: {confirm: 'Are You Sure?'}  %> </td>
 	</tr>
 	<% end %>
+
 </table>
+<br/>
+<p> Total expenditure today : <%= Expense.where(date: Date.today).sum(:amount) %></p> <br/>
+
+
+<p><%= link_to "Add an expense",new_expense_path %></p>
