Added login form and sessions controller

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,15 @@
     
 
   <body>
+    <% if logged_in? %>
+      <%= link_to "logout", logout_path, method: :delete %>
+   <% else %>
+      <%= link_to "log in", login_path%>
+      <%= link_to "signup", signup_path%>
+   <%end%>
    <%= render 'layouts/messages'%>
 
     <%= yield %>
+    <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
