--- a/app/views/expenses/edit.html.erb
+++ b/app/views/expenses/edit.html.erb
@@ -1,5 +1,4 @@
-<h1>Editing the expense</h1>
+<h1 align="center">Editing the expense</h1>
 
 <%= render 'form'%>
 
-<%= link_to "Back", expenses_path %> 
