--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
     
 
   <body>
+    <%= render 'layouts/navigation' %>
     <% if logged_in? %>
       <%= link_to "logout", logout_path, method: :delete %>
    <% else %>
@@ -18,8 +19,10 @@
       <%= link_to "signup", signup_path%>
    <%end%>
    <%= render 'layouts/messages'%>
-
+<div class ="container">
     <%= yield %>
+  </div>
+  <%= render 'layouts/footer' %>
     <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
