--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,5 +1,5 @@
 <div class="center jumbotron">
   <h1>Expense Tracker</h1>
-  <%= link_to "Sign up now", signup_path, class: "btn btn-lg btn-xlarge btn-color" %>
+  <%= link_to "Sign up now", signup_path, class: "btn hovering btn-lg btn-xlarge btn-color" %>
 </div>
 
