--- a/app/views/expenses/_expense.html.erb
+++ b/app/views/expenses/_expense.html.erb
@@ -1,28 +1,41 @@
-<h1>Expenses made Today(<%= Date.today.to_s(:long) %>)</h1>
+<h1 align="center">Expenses made Today(<%= Date.today.to_s(:long) %>)</h1>
 
 <br/>
-<table>
+<!-- <table>
 	<tr>
 		<th>Expense</th>
 		<th>Amount</th>
-		<!-- <th>Date</th> -->
-	</tr>
+		<th>Date</th>
+	</tr> -->
+	<div class ="row">
+	<div class="col-xs-8 col-xs-offset-2">
+		<div class ="well well-lg">
+		<div class="expenselist">
+	   <table id ="exptable">	
 <% obj.each do |f| %>
+
 	<tr>
-		<td><%= f.expense_name %>
+		<td class="tdname"><%= f.expense_name %>
 		</td>
-		<td><%= f.amount %>
+		<td class="tdamt"><%= f.amount %>
+		</td>
+		<td class="tdamt"><%= f.category %>
 		</td>
 		<!-- <td> <%= f.date.to_s(:long) %> -->
 		</td>
-		<td> <%= link_to "Edit" , edit_expense_path(f) %> </td>
-		<td> <%= link_to "Delete" , expense_path(f), method: :delete, data: {confirm: 'Are You Sure?'}  %> </td>
+		<td class="tdedit"> <%= link_to "Edit" , edit_expense_path(f) %> </td>
+		<td class="tddel"> <%= link_to "Delete" , expense_path(f), method: :delete, data: {confirm: 'Are You Sure?'}  %> </td>
 	</tr>
 	<% end %>
 
 </table>
 <br/>
+<hr>
 <p> Total expenditure today : <%= Expense.where(date: Date.today).sum(:amount) %></p> <br/>
+</div>
+</div>
+</div>
+</div>
 
 
 <p><%= link_to "Add an expense",new_expense_path %></p>
