--- a/app/views/expenses/show.html.erb
+++ b/app/views/expenses/show.html.erb
@@ -1,5 +1,18 @@
-<h1>Showing selected expense</h1>
-<p> Expense name: <%= @expense.expense_name %></p>
-<p> Amount spent: <%= @expense.amount %></p>
-<p> Date: <%= @expense.date %></p>
-<%= link_to "Back", expenses_path %> 
+<h1 align = "center"><%= @expense.expense_name %></h1>
+<div class ="well col-md-6">
+
+<h4><strong> Amount spent:</strong></h4><hr> <%= @expense.amount %>
+<h4><strong> Date:</strong></h4><hr> <%= @expense.date %>
+<div class="article-actions">
+<%= link_to "Edit", edit_expense_path(@expense), class: "btn btn-xs btn-primary" %>
+
+<%= link_to "Delete", expense_path(@expense), method: :delete,
+
+data: { confirm: "Are you sure you want to delete the expense?"},
+
+class: "btn btn-xs btn-danger" %>
+
+<%= link_to "Back", expenses_path, class: "btn btn-xs btn-success" %>
+</div>
+</div>
+</div>
