--- a/app/views/expenses/_expense.html.erb
+++ b/app/views/expenses/_expense.html.erb
@@ -1,17 +1,20 @@
 <h1 align="center">Expenses made Today(<%= Date.today.to_s(:long) %>)</h1>
 
 <br/>
-<!-- <table>
-	<tr>
-		<th>Expense</th>
-		<th>Amount</th>
-		<th>Date</th>
-	</tr> -->
-	<div class ="row">
+<div class ="row">
 	<div class="col-xs-8 col-xs-offset-2">
 		<div class ="well well-lg">
 		<div class="expenselist">
-	   <table id ="exptable">	
+	   <table align="center" id ="exptable">	
+
+	<tr class="headingrow">
+		<th class ="headdef">Expense</th>
+		<th class= "headdef">Amount</th>
+		<th class= "headdef">Category</th>
+		<th></th>
+		<th></th>
+	</tr>
+
 <% obj.each do |f| %>
 
 	<tr>
@@ -23,19 +26,23 @@
 		</td>
 		<!-- <td> <%= f.date.to_s(:long) %> -->
 		</td>
-		<td class="tdedit"> <%= link_to "Edit" , edit_expense_path(f) %> </td>
-		<td class="tddel"> <%= link_to "Delete" , expense_path(f), method: :delete, data: {confirm: 'Are You Sure?'}  %> </td>
-	</tr>
+		<td class="tdedit"> <%= link_to "Edit", edit_expense_path(f), class: "btn btn-xs btn-primary" %> </td>
+		<td class="tddel"> <%= link_to "Delete", expense_path(f), method: :delete,
+
+data: { confirm: "Are you sure you want to delete the expense?"},
+
+class: "btn btn-xs btn-danger" %> </td>
 	<% end %>
 
 </table>
 <br/>
 <hr>
-<p> Total expenditure today : <%= Expense.where(date: Date.today).sum(:amount) %></p> <br/>
+<div class ="well total">
+<p> Total expenditure today : <%= Expense.where(date: Date.today,user_id: current_user).sum(:amount) %></p> </div><br/>
 </div>
+<p align = "center"><%= link_to "Add an expense",new_expense_path, class: "btn btn-xs btn-primary" %></p>
 </div>
 </div>
 </div>
 
 
-<p><%= link_to "Add an expense",new_expense_path %></p>
