--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -2,19 +2,19 @@
 
 <div class = "row">
 	<div class="col-xs-12">
-		<%= form_for(@expense, :html => {class: "form-horizontal", role: "form"}) do |f| %>
+		<%= form_for(@expense,:remote => true, :authenticity_token => true, :html => {class: "form-horizontal", role: "form"}) do |f| %>
 		 <div class="form-group">
 			<div class = "col-sm-2 control-label">
 			<%= f.label :expense_name %></div>
 			<div class="col-sm-8">
-			<%= f.text_field :expense_name, class: "form-control" %>
+			<%= f.text_field :expense_name, class: "form-control",placeholder: "Enter the expense name" %>
 	       </div>
 	    </div>
 <div class="form-group">
 		<div class = "col-sm-2 control-label">
 		<%= f.label :amount %></div>
 		<div class="col-sm-8">
-		<%= f.text_field :amount,class: "form-control"%>
+		<%= f.text_field :amount,class: "form-control", placeholder: "Enter the amount spent"%>
 	</div>
 </div>
 <div class="form-group">
