--- a/app/views/expenses/show.html.erb
+++ b/app/views/expenses/show.html.erb
@@ -3,6 +3,7 @@
 
 <h4><strong> Amount spent:</strong></h4><hr> <%= @expense.amount %>
 <h4><strong> Date:</strong></h4><hr> <%= @expense.date %>
+<h4><strong> Category:</strong></h4><hr> <%= @expense.category %>
 <div class="article-actions">
 <%= link_to "Edit", edit_expense_path(@expense), class: "btn btn-xs btn-primary" %>
 
