--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -12,13 +12,15 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li> <%= link_to "Today's expenses", expenses_path %></li>
+    <div class="collapse navbar-collapse navi" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navi">
+        <li><a href="#">Link <span class="sr-only navi">(current)</span></a></li>
+         <% if logged_in? %>
+        <li class="navi"> <%= link_to "Today's expenses", expenses_path %></li>
+        <% end %>
         <li><a href="#">Link</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">Action</a></li>
             <li><a href="#">Another action</a></li>
@@ -37,17 +39,26 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
+        <% if logged_in? %>
         <li><a href="#">Link</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.name %><span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
+            <li><%= link_to "Edit your profile", edit_user_path(current_user) %></li>
+            <li><%= link_to "View your profile", user_path(current_user) %></li>
+
+
             <li><a href="#">Something else here</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><%= link_to 'Log out', logout_path, method: :delete %></li>
           </ul>
         </li>
+        <% else %>
+            <li><%= link_to 'Log in', login_path %></li>
+            <li><%= link_to 'Sign up', signup_path %></li>
+        <% end %>
+
+
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
