--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,4 +5,4 @@
 		</div>
 	</div>
 	<h4 align = "center"><%= @user.name %>'s expenses</h4>
-	<%= render 'expenses/expense', obj: @user.expenses %>
+	<p align = "center"><%= link_to "Add an expense",new_expense_path, class: "btn btn-xs btn-primary" %></p>
