--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,11 @@
-<h1 align ="center"> Welcome <%= @user.name %>
+<h1 align ="center"> Welcome <%= @user.name %></h1>
+<br/>
 	<div class ="row">
-		<div class ="col-md-4 col-md-offset-4 center">
+		<div align = "center" class ="col-md-8 col-md-offset-6 center">
 			<%= gravatar_for @user, size: 150 %>
 		</div>
 	</div>
-	<h4 align = "center"><%= @user.name %>'s expenses</h4>
-	<p align = "center"><%= link_to "Add an expense",new_expense_path, class: "btn btn-xs btn-primary" %></p>
+	<br/>
+	<br/>
+	<!-- <h4 align = "center"><%= @user.name %>'s expenses</h4> -->
+	<p align = "center" class="col-md-8 col-md-offset-6 center"><%= link_to "Add an expense",new_expense_path, class: "btn btn-primary" %></p>
