--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,10 +1,10 @@
 <h1 align="center">Listing All Categories</h1>
 <div align="center">
-<% @category.each do |category| %>
+<% @categories.each do |category| %>
 <ul class="listing">
 	<div class="row">
 	<div class="well col-md-4 col-md-offset-4">
-		<li class="article-title">
+		<li class="category-title">
 			<%= link_to "#{category.category_name}", category_path(category) %>
 		</li>
 	</div>
