--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -3,21 +3,23 @@
 <br><br/>
 <%= form_for(@category, :html => {class: "form-horizontal", role: "form"}) do |f| %>
 	<div class="form-group">
-	<div class="control-label col-sm-2">
+		<div >
+	<div align="center"class="control-label col-sm-4">
 		<%= f.label :name %>
 	</div>
-	<div class="col-sm-10">
+	<div class="col-xs-4">
 		<%= f.text_field :category_name, class: "form-control", placeholder: "Category name", autofocus: true %>
 	</div>
 	</div>
+</div>
 	<div class="form-group">
-	<div align ="center" class=" col-sm-10">
-		<%= f.submit class: 'btn btn-primary btn-lg' %>
+	<div align ="center" class=" col-xs-12">
+		<%= f.submit class: 'btn btn-primary' %>
 	</div>
 	</div>
 
 <% end %>
 
-<div class="col-xs-4 col-xs-offset-6">
+<div align ="center"class="col-xs-12">
 [ <%= link_to "Back", expenses_path %> ]
 </div>
