--- a/app/views/expenses/month.html.erb
+++ b/app/views/expenses/month.html.erb
@@ -1,41 +1,53 @@
-<h1>Expenses made in <%= Date::MONTHNAMES[Date.today.month] %></h1>
+<h1 align="center">Expenses made in <%= Date::MONTHNAMES[Date.today.month] %> : <%= Expense.where("date > ? AND date < ?", Time.now.beginning_of_month, Time.now.end_of_month).sum(:amount) %></h1>
 
-<br/>
-<table>
-	<tr>
-		<th>Expense</th>
-		<th>Amount</th>
-		<th>Date</th> 
-	</tr>
-<% @expenses.each do |f| %>
-	<tr>
-		<td><%= f.expense_name %>
-		</td>
-		<td><%= f.amount %>
-		</td>
-        <td>
-		<%= f.date.to_s(:short) %> 
-		</td>
+
+ 
+
+
+
+
+<% @task = @expenses.group_by {|t| t.date} %>
+<%@task.each do |d,e| %>
+
+<div class ="row">
+	<div class="col-xs-8 col-xs-offset-2">
+		<div class ="well well-lg">
+			<div style="background: #81BEF7;margin-top: 5px; margin-bottom: 5px;" class="rounded">
+				<b>
+				<span style="padding: 5px"><%= d.to_s(:long) %></span>
+				<span style=" float:right;padding-right: 5px ">Expenditure: <%= Expense.where(date: d).sum(:amount)%></span>
+				</b>
+			 </div>
+			 <br/>
+		<div class="expenselist">
+	   <table align="center" id ="exptable">	
+
+	<tr class="headingrow">
+		<th class ="headdef">Expense</th>
+		<th class= "headdef">Amount</th>
+		<th class= "headdef">Category</th>
 		
 	</tr>
-	<% end %>
-
+<% for t in e %>
+  <tr>
+ 	<td class="tdname"><%= t.expense_name %></td>
+ 	<td class="tdamt"><%= t. amount %></td>
+ 	<td class="tdamt"> <%=t.category.category_name if t.category %></td> 
+  </tr>
+ <% end %>
 </table>
 <br/>
-<p> Total expenditure this month : <%= Expense.where("date > ? AND date < ?", Time.now.beginning_of_month, Time.now.end_of_month).sum(:amount) %></p> <br/>
+</div>
+<div class ="well">
+ <p>Total expenditure this month : <%= Expense.where(date: d).sum(:amount) %></p>
+</div>
+</div>
+</div>
+</div>
 
-<%  date = 1.day.from_now(@expenses.first.date.to_date) rescue nil # increment the day
-    @expenses.each do |item| 
-      if date > item.date.to_date 
-        date = item.date.to_date %>
-        <div style="background: #81BEF7;margin-top: 5px; margin-bottom: 5px;" class="rounded"><b><span style="padding: 5px"><%=h date %></span></b></div>
-      <%end%>
+<% end %>
 
-      <p>
+	
 
-      <span class="subtext" style="margin-left: 55px">by <%= Expense.where("date = ?",date) %></span>
-    </p>
 
-<%  end # end for items_each%>
-<% @ expenses.each do |item|
 	
