--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,13 +1,13 @@
 <%= render 'shared/errors', obj: @user %>
 
-<div class='row'>
-  <div class='col-xs-12'>
+<div align = "center" class='row'>
+  <div class='col-xs-6 col-xs-offset-4'>
     <%= form_for(@user, :html => {class: "form-horizontal", role: "form"}) do |f| %>
       <div class="form-group">
         <div class="control-label col-sm-2">
           <%= f.label :username %>
         </div>
-        <div class="col-sm-8">
+        <div class="col-xs-6">
           <%= f.text_field :name, class: "form-control", placeholder: "Enter username", autofocus: true %>
         </div>
       </div>
@@ -15,7 +15,7 @@
         <div class="control-label col-sm-2">
           <%= f.label :email %>
         </div>
-        <div class="col-sm-8">
+        <div class="col-xs-6">
           <%= f.email_field :email, class: "form-control", placeholder: "Enter email" %>
         </div>
       </div>
@@ -23,18 +23,18 @@
         <div class="control-label col-sm-2">
           <%= f.label :password %>
         </div>
-        <div class="col-sm-8">
+        <div class="col-xs-6">
           <%= f.password_field :password, class: "form-control", placeholder: "Enter password" %>
         </div>
       </div>  
       <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-          <%= f.submit(@user.new_record? ? "Sign up" : "Update account", class: 'btn btn-primary btn-lg') %>
+        <div align = "center" >
+          <%= f.submit(@user.new_record? ? "Sign up" : "Update account", class: 'btn btn-primary') %>
         </div>
       </div>
     <% end %>
-    <div class="col-xs-4 col-xs-offset-4">
-      [ <%= link_to "Cancel request and return to articles listing", expenses_path %> ]
+    <div align = "center">
+      [ <%= link_to "Cancel request and back", expenses_path %> ]
     </div>
   </div>
 </div>
