--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,17 +1,10 @@
 <h1 align="center"> Showing the category</h1>
-
-<h1 align = "center"><%= @category.category_name %></h1>
-<div align = "center" class ="well">
-<div class="article-actions">
-<%= link_to "Edit", edit_category_path(@category), class: "btn btn-xs btn-primary" %>
-
-<%= link_to "Delete", category_path(@category), method: :delete,
-
-data: { confirm: "Are you sure you want to delete the expense?"},
-
-class: "btn btn-xs btn-danger" %>
-
-<%= link_to "Back", expenses_path, class: "btn btn-xs btn-success" %>
-</div>
-</div>
+	<h1 align = "center"><%= @category.category_name %></h1>
+	<div align = "center" class ="well">
+		<div class="article-actions">
+			<%= link_to "Edit", edit_category_path(@category), class: "btn btn-xs btn-primary" %>
+			<%= link_to "Delete", category_path(@category), method: :delete, data: { confirm: "Are you sure you want to delete the expense?"}, class: "btn btn-xs btn-danger" %>
+			<%= link_to "Back", expenses_path, class: "btn btn-xs btn-success" %>
+		</div>
+	</div>
 
