--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,79 +1,79 @@
 <nav class="navbar navbar-default" >
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <%= link_to "Expense Tracker " , root_path ,class: "navbar-brand", id: "logo" %>
-    </div>
+	<div class="container-fluid">
+		<!-- Brand and toggle get grouped for better mobile display -->
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<%= link_to "Expense Tracker " , root_path ,class: "logo" %>
+		</div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navi navbar-light">
-        <li><a href="#">Link <span class="sr-only navi">(current)</span></a></li>
-         <% if logged_in? %>
-        <li class="navi"> <%= link_to "Today's expenses", expenses_path, id: "navi" %></li>
-        <% end %>
-        <li><a href="#" id= "navi">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Report<span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#"><%= link_to "Today", expenses_path%></a></li>
-            <li><a href="#"><%= link_to "This month",expenses_month_path %></a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-        <% if logged_in? %>
-        <li class="dropdown">
-          <a href="#" color= "black" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id= "navi">Categories<span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><%= link_to "All Categories", categories_path %></li>
-            <% @categories= Category.where(user_id: current_user) %>
-            <% @categories.each do |category| %>
-            <li><%= link_to "#{category.category_name}", category_path(category) %></li>
-            <% end %>
-            <li role="separator" class="divider"></li>
-            <li><%= link_to "Create New Category", new_category_path %></li>
-          </ul>
-        </li>
-        <% end %>
-      </ul>
-      <form class="navbar-form navbar-left">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-      <ul class="nav navbar-nav navbar-right">
-        <% if logged_in? %>
-        <li><a href="#" id= "navi">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id = "navi"><%= current_user.name %><span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><%= link_to "Edit your profile", edit_user_path(current_user) %></li>
-            <li><%= link_to "View your profile", user_path(current_user) %></li>
-
-
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><%= link_to 'Log out', logout_path, method: :delete %></li>
-          </ul>
-        </li>
-        <% else %>
-            <li><%= link_to 'Log in', login_path,id: "navi" %></li>
-            <li><%= link_to 'Sign up', signup_path, id: "navi" %></li>
-        <% end %>
+		<!-- Collect the nav links, forms, and other content for toggling -->
+		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			<ul class="nav navbar-nav navi navbar-light">
+				<li><a href="#">Link <span class="sr-only navi">(current)</span></a></li>
+				 <% if logged_in? %>
+				<li class="navi"> <%= link_to "Add an expense", new_expense_path, id: "navi" %></li>
+				<% end %>
+				<!-- <li><a href="#" id= "navi">Link</a></li> -->
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id= "navi">Report<span class="caret"></span></a>
+					<ul class="dropdown-menu">
+						<li><%= link_to "Today", expenses_path%></li>
+						<li><%= link_to "This month",expenses_month_path %></li>
+						<li><%= link_to "This year",expenses_year_path %></li>
+						<li role="separator" class="divider"></li>
+						<li><a href="#">Separated link</a></li>
+						<li role="separator" class="divider"></li>
+						<li><a href="#">One more separated link</a></li>
+					</ul>
+				</li>
+				<% if logged_in? %>
+				<li class="dropdown">
+					<a href="#" color= "black" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id= "navi">Categories<span class="caret"></span></a>
+					<ul class="dropdown-menu">
+						<li><%= link_to "All Categories", categories_path %></li>
+						<% @categories= Category.where(user_id: current_user) %>
+						<% @categories.each do |category| %>
+						<li><%= link_to "#{category.category_name}", category_path(category) %></li>
+						<% end %>
+						<li role="separator" class="divider"></li>
+						<li><%= link_to "Create New Category", new_category_path %></li>
+					</ul>
+				</li>
+				<% end %>
+			</ul>
+			<!-- <form class="navbar-form navbar-left">
+				<div class="form-group">
+					<input type="text" class="form-control" placeholder="Search">
+				</div>
+				<button type="submit" class="btn btn-default">Submit</button>
+			</form>-->
+			<ul class="nav navbar-nav navbar-right"> 
+				<% if logged_in? %>
+				<!-- <li><a href="#" id= "navi">Link</a></li> -->
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id = "navi"><%= current_user.name %><span class="caret"></span></a>
+					<ul class="dropdown-menu">
+						<li><%= link_to "Edit your profile", edit_user_path(current_user) %></li>
+						<li><%= link_to "View your profile", user_path(current_user) %></li>
 
 
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+						<li><a href="#">Something else here</a></li>
+						<li role="separator" class="divider"></li>
+						<li><%= link_to 'Log out', logout_path, method: :delete %></li>
+					</ul>
+				</li>
+				<% else %>
+						<li><%= link_to 'Log in', login_path,id: "navi" %></li>
+						<li><%= link_to 'Sign up', signup_path, id: "navi" %></li>
+				<% end %>
+
+
+			</ul>
+		</div><!-- /.navbar-collapse -->
+	</div><!-- /.container-fluid -->
 </nav>
