--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -5,7 +5,7 @@
 				<div class="row">
 				<div class="well col-md-4 col-md-offset-4">
 					<li class="category-title">
-						<%= link_to "#{category.category_name}", category_path(category) %>
+						<%= link_to "#{category.name}", category_path(category) %>
 					</li>
 				</div>
 				</div>
