--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -2,7 +2,7 @@
 
 <div align = "center" class='row'>
 	<div class='col-xs-6 col-xs-offset-4'>
-		<%= form_for(@user, :html => {class: "form-horizontal", role: "form"}) do |f| %>
+		<%= form_for(@user, :authenticity_token => true, :html => {class: "form-horizontal", role: "form"}) do |f| %>
 			<div class="form-group">
 				<div class="control-label col-sm-2">
 					<%= f.label :username %>
