--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,8 +1,32 @@
 <h1 align="center"> Showing the category</h1>
 	<h1 align = "center"><%= @category.name %></h1>
 	<div align = "center" class ="well">
+		<div>
+			<div class="expenselist">
+			   			<table align="center" class ="exptable">	
+
+								<tr class="headingrow">
+									<th class ="headdef">Expense</th>
+									<th class= "headdef">Amount</th>
+									<th class= "headdef">Date</th>	
+								</tr>
+								<% @sum = 0 %>
+			<% @c = Expense.where(category_id: params[:id], user_id: current_user) %>
+			<% @c.each do |t| %>
+			<tr>
+										<td class="tdname"><%= t.name %></td>
+										<td class="tdamt"><%= t. amount %></td>
+										<td class="tdamt"> <%=t.date.to_s(:short) %></td>
+										<% @sum = @sum + t.amount %>
+									</tr>
+			<% end %>
+		</table>
+		<div class ="well total">	
+						<p>Total expenditure in <%= @category.name %> : <%= @sum %> </p>
+		</div>
+		</div>
 		<div class="expense-actions">
-			<%= link_to "Edit", edit_category_path(@category), class: "btn btn-xs btn-primary" %>
+	
 			<%= link_to "Delete", category_path(@category), method: :delete, data: { confirm: "Are you sure you want to delete the expense?"}, class: "btn btn-xs btn-danger" %>
 			<%= link_to "Back", expenses_path, class: "btn btn-xs btn-success" %>
 		</div>
